samples/_failures_safe/1761177464_38579a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f1118b1.c: In function ‘main’:
./samples/SAFE/__tmp_1f1118b1.c:151:12: error: missing terminating " character
  151 |     printf("
      |            ^
./samples/SAFE/__tmp_1f1118b1.c:151:5: error: expected expression at end of input
  151 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_1f1118b1.c:151:5: error: expected declaration or statement at end of input
